Partial skeleton code for lynx dev

--- a/ui/src/Lynx.css
+++ b/ui/src/Lynx.css
@@ -2,6 +2,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
+  width: 80%;
+  min-width: 600px;
 }
 .input-div {
   width: 100%;
@@ -34,13 +36,23 @@
   margin: 15px;
 }
 .app-table {
-  float: left;
-  width: 75%;
+  display: flex;
+  justify-content: center;
 }
 .app-menu {
   float: right;
   width: 25%;
 }
 .app-row:hover {
+  cursor: pointer;
+}
+.app-icon {
+  border: 3px solid #F0A07C;
+  border-radius: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+.app-icon:hover {
+  border: 3px solid #4A274F;
   cursor: pointer;
 }
