--- a/ui/src/Lynx.css
+++ b/ui/src/Lynx.css
@@ -16,6 +16,7 @@
   width: 40px;
 }
 .app-header {
+  font-family: sans-serif;
   text-align: center;
   width: 100%;
   font-weight: 500;
@@ -46,13 +47,41 @@
 .app-row:hover {
   cursor: pointer;
 }
-.app-icon {
-  border: 3px solid #F0A07C;
+.app-thumbnail {
+  border: 3px solid white;
   border-radius: 20px;
   margin-right: 30px;
   margin-left: 30px;
 }
-.app-icon:hover {
+.app-thumbnail:hover {
   border: 3px solid #4A274F;
   cursor: pointer;
+}
+.text-div {
+  text-align: center;
+  width: 100%;
+  font-size: 25px;
+  font-family: sans-serif;
+  padding-top: 20px;
+  color: #4A274F;
+}
+.lynx-panel {
+  width: 100%;
+  border: 1px solid #DFDFDF;
+}
+.lynx-panel-header {
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 20px 20px 20px 20px;
+  background-color: #F7F7F7;
+}
+.lynx-panel-header:hover {
+  cursor: pointer;
+}
+.lynx-panel-body {
+  width: 100%;
+  font-family: sans-serif;
+  padding: 20px 20px 20px 20px;
+  border-top: 1px solid #DFDFDF;
 }
